[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                                        # error handling
bytes = "1.3.0"                                                          # helps manage buffers
thiserror = "1.0.32"                                                     # error handling
tokio = { version = "1.52.2", features = ["full"] }                      # async networking
http = "1.0"
chrono = "0.4.41"
lazy_static = "1.5.0"
winnow = { version = "1.0.3", features = ["binary", "parser", "ascii"] }
